# TOPS

Introduction To DataScience/: Assessment_ATM_Class.ipynb  IntroductionToDataScience.ipynb  amazon_reviews_nlp_assessment.ipynb  module4_assessment.ipynb  module4_statistics_math_datascience.ipynb
Introduction To DataScience/Gen AI/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  generate_notebooks.py  pyproject.toml  requirements.txt  setup.cfg
Introduction To DataScience/Gen AI/assets/: .gitkeep
Introduction To DataScience/Gen AI/datasets/: .gitkeep
Introduction To DataScience/Gen AI/generated_images/: .gitkeep
Introduction To DataScience/Gen AI/notebooks/: comparison_traditional_ai_vs_genai.ipynb  genai_intro.ipynb  session01_intro_to_generative_models.ipynb  session02_autoencoder_and_vae.ipynb  session03_gan.ipynb  session04_diffusion_models.ipynb  session05_industry_applications.ipynb
Introduction To DataScience/Gen AI/outputs/: .gitkeep
Introduction To DataScience/Gen AI/prompts/: chatbot_prompts.json
Introduction To DataScience/Gen AI/reports/: .gitkeep
Introduction To DataScience/Gen AI/src/: __init__.py  autoencoder.py  chatbot.py  config.py  data_loader.py  diffusion.py  gan.py  playlist.py  prompt_engineering.py  summarizer.py  utils.py  visualization.py
Introduction To DataScience/Gen AI/tests/: __init__.py  test_chatbot.py  test_utils.py
Introduction To DataScience/Module 8 Assignment/: CNN_RNN_Transformers.pptx  Module8_Neural_Networks_Deep_Learning.ipynb  ann_churn_model.keras
Introduction To DataScience/Module_3_Assessment/MongoDB Flight Bookings/: Flight_Bookings.txt
Introduction To DataScience/Module_3_Assessment/MySQL Blinkit/: blinkit.sql  blinkit_category.sql  blinkit_order_items.sql  blinkit_orders.sql  blinkit_product.sql  blinkit_product_suppliers.sql  blinkit_routines.sql  blinkit_staff.sql  blinkit_suppliers.sql  blinkit_users.sql
Introduction To DataScience/Module_3_Assignment/MongoDB Employees/: Employees.txt
Introduction To DataScience/Module_3_Assignment/MySQL Sales/: sales_customers.sql  sales_departments.sql  sales_employees.sql  sales_mysql_assignment.sql  sales_orders.sql  sales_products.sql  sales_routines.sql
Introduction To DataScience/Module_3_Assignment/Theory Assignment/: Compare SQL and NoSQL Databases.txt  Normalization vs Denormalization.pptx
Introduction To DataScience/Module_5_Assessment/: Module_5_Assessment_Cardiovascular.ipynb  Module_5_Assessment_Stock_Market.ipynb
Introduction To DataScience/Module_5_Assignment/: Module_5_Assignment.ipynb  cleaned_car_data.csv
Introduction To DataScience/Module_6_Assessment/: Module 6 Assessment.ipynb
Introduction To DataScience/Module_6_Assignment/: Delhi.csv  Kolkata.csv  Mumbai.csv
Introduction To DataScience/Module_7_Assessment/: Module 7 Assessment.ipynb
Introduction To DataScience/Module_7_Assignment/: Model Evaluation techniques in Unsupervised Learning.pptx  Module 7 Assignment.ipynb
data_thought_engine/: README.md
(+13 files in other folders)
