[metadata]
name = generative-ai-lab
version = 1.0.0
author = Generative AI Lab Contributors
description = A production-quality Generative AI Laboratory repository
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.12
install_requires =
    torch>=2.0.0
    torchvision>=0.15.0
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.3.0
    scipy>=1.11.0
    matplotlib>=3.7.0
    seaborn>=0.12.0
    Pillow>=10.0.0
    tqdm>=4.65.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    jupyter>=1.0.0
    notebook>=7.0.0
    ipykernel>=6.25.0

[options.packages.find]
include = src*

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 99
exclude = .git,__pycache__,build,dist,venv
